@@ -160,12 +160,14 @@ class ReflectionTest(fixtures.TestBase, ComparesTables):
         t1 = Table('test', meta,
             Column('id', sa.Integer, primary_key=True),
             Column('data', sa.String(50)),
+            mysql_engine='MyISAM'
         )
         t2 = Table('test2', meta,
             Column('id', sa.Integer, sa.ForeignKey('test.id'),
                                         primary_key=True),
             Column('id2', sa.Integer, primary_key=True),
             Column('data', sa.String(50)),
+            mysql_engine='MyISAM'
         )
         meta.create_all()
         try:
@@ -1166,8 +1168,9 @@ class CaseSensitiveTest(fixtures.TablesTest):
         assert t1.c.x is not None
 
     @testing.fails_if(lambda: 
-            testing.against('mysql') and 
-            not testing.requires._has_mysql_fully_case_sensitive())
+            testing.against(('mysql', '<', (5, 5))) and 
+            not testing.requires._has_mysql_fully_case_sensitive()
+            )
     def test_reflect_via_fk(self):
         m = MetaData()
         t2 = Table("SomeOtherTable", m, autoload=True, autoload_with=testing.db)
